Implemented user account activation
